<resources>
    <string name="app_name">Xổ số TP.HCM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Trang chủ</string>
    <string name="guide">Hướng dẫn</string>
    <string name="tips">Lời khuyên</string>

    <string name="sample_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="click_to_see_more">Bấm để xem thêm</string>

</resources>