<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:clipToPadding="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/guide_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:strokeColor="@color/text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:background="@drawable/card_gradiant"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guideTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/hello_blank_fragment"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:letterSpacing="0.1"
                android:fontFamily="sans-serif"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:shadowDx="2"
                android:shadowDy="2"/>

            <TextView
                android:id="@+id/guideDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingStart="6dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textAlignment="textStart"
                android:textStyle="normal"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                tools:text="@string/sample_desc"
                android:textSize="15dp"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:shadowDy="2"
                android:shadowDx="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="6dp"
                android:shadowColor="@color/black"
                android:shadowRadius="4"
                android:shadowDx="2"
                android:shadowDy="1"
                android:text="@string/click_to_see_more"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="italic" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>